# sonda

./: .env.example  .gitignore  CLAUDE.md  boot.sh  manage.py  pyproject.toml
.github/workflows/: build-push.yml
accounts/: adapters.py
docker/: Dockerfile
docs/: questionario_commercia.docx
questionario/: admin.py  forms.py  models.py  urls.py  views.py
questionario/migrations/: 0001_initial.py  0002_risposta_email.py  0003_q6_proposta_multipla.py
questionario/templates/questionario/: base.html  dashboard.html  grazie.html  index.html  link_non_valido.html
questionario/templates/questionario/partials/: email_step.html  form_body.html  questionario_step.html
sonda/: settings.py  urls.py  wsgi.py
